--- a/components/gnylc6o17-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/gnylc6o17-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: gnylc6o17-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-48e696c07c.u1rt.p3.openshiftapps.com/rhtap/rhtap-qe-nodejs:652f2eab68f6a213cf531b36858c218558da3aa5@sha256:3742cd7fa081c998417deb7d240d454327c6b3364be171c752183d376b22a0c5
+          name: container-image
